Quick fix to make the capital links look better on mobile.

--- a/static/css/capitals-custom.css
+++ b/static/css/capitals-custom.css
@@ -37,3 +37,9 @@
 #top-section{
   margin-bottom:50px;
 }
+
+@media (max-width: 767px) {
+    .capital_column{
+      width:50%;
+    }
+}
